--- a/Comparison.html
+++ b/Comparison.html
@@ -11,7 +11,7 @@
     </style>
 
     <meta charset="UTF-8">
-    <title>comparison</title>
+    <title>Comparison</title>
 
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   -->
@@ -32,9 +32,9 @@
                         </div>    
                 </div>  
                 
-               <div class="col-md-2">     
-                    <!-- <div class="btn-group" role="group" aria-label="Basic example"> -->
-                        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                      <div class="md-col-6">
+                        <div class="col-md-2">     
+                            <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
                             <button onclick="window.location.href='Comparison.html';" type="button" class="btn btn-primary">Comparison</button>
                             <button onclick="window.location.href='Weather_df.html';" type="button" class="btn btn-primary">Data</button><a href="Weather_df.html"></a>
                           
@@ -48,6 +48,7 @@
                                 <li><a class="dropdown-item" href="Cloudiness.html">Cloudiness</a></li>
                                 <li><a class="dropdown-item" href="Wind-Speed.html">Wind-Speed</a></li>
                               </ul>
+                        </div>
                             </div>
                           </div>
         </div>
@@ -61,7 +62,7 @@
                 <header>
                     <h1>Comparison: Latitude vs. X</h1>
                 </header>
-                <p>Click any visulaization to get an in-depth analysis</p>
+                <p>Click any Plot to get an in-depth analysis</p>
 
                     <!--Normally these medium columns go full wide on small screen sizes-->
             <div class="row">
