--- a/Humidity.html
+++ b/Humidity.html
@@ -11,7 +11,7 @@
     </style>
 
     <meta charset="UTF-8">
-    <title>humidity</title>
+    <title>Humidity</title>
 
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   -->
@@ -79,7 +79,7 @@
                 <!-- <figcaption>Latitude_Max_Temperature</figcaption> -->
                 <img src="../Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity.png" style="width:100%;height:100%;align:middle">
                 <figcaption>
-                        The humidity percentage has only weak dependence on the latitude. It takes smallest value around -20(Southern Hemisphere) and 20 latitude(Northern Hemisphere).
+                        The humidity percentage has only weak dependence on the latitude. It takes smallest value around -20 (Southern Hemisphere) and 20 latitude (Northern Hemisphere).
                 </figcaption>  
             </figure>
     
