--- a/Comparison.html
+++ b/Comparison.html
@@ -70,29 +70,29 @@
                                 
                             <a href="Temperature.html"><figure class="comparison_figure" style="margin:20px;margin-left: 20%">
                                 <figcaption style="text-align: center;font-size: 150%">vs. Temperature</figcaption>
-                                <img src="../Visualizations/City_Latitude_vs_Max_Temperature.png" alt="Latitude_Max_Temperature" >
+                                <img src=".//Visualizations/City_Latitude_vs_Max_Temperature.png" alt="Latitude_Max_Temperature" >
                             </figure></a>    
                     </div>
 
 
                      <div class="col-sm-6 col-md-6">
-                           <a href="Temperature.html"><figure class="comparison_figure" style="margin:20px;margin-left: 20%">
+                           <a href="Cloudiness.html"><figure class="comparison_figure" style="margin:20px;margin-left: 20%">
                             <figcaption style="text-align: center;font-size: 150%">vs. Cloudiness</figcaption>
-                           <img src="../Visualizations/City_Latitude_vs_Cloudiness.png" alt="Latitude_Cloudiness" >
+                           <img src=".//Visualizations/City_Latitude_vs_Cloudiness.png" alt="Latitude_Cloudiness" >
                                   </figure></a>
                     </div>
             </div>
             <div class="row">
                     <div class="col-sm-6 col-md-6">
-                           <a href="Temperature.html"><figure class="comparison_figure" style="margin-bottom:30%;margin-left: 20%">
+                           <a href="Humidity.html"><figure class="comparison_figure" style="margin-bottom:30%;margin-left: 20%">
                             <figcaption style="text-align: center;font-size: 150%">vs. Humidity</figcaption>
-                           <img src="../Visualizations/City_Latitude_vs_Humidity.png" alt="Latitude_Humidity" >
+                           <img src=".//Visualizations/City_Latitude_vs_Humidity.png" alt="Latitude_Humidity" >
                                 </figure></a>
                     </div>
                     <div class="col-sm-6 col-md-6">
-                            <a href="Temperature.html"><figure class="comparison_figure" style="margin-bottom:30%;margin-left: 20%;">
+                            <a href="Wind-Speed.html"><figure class="comparison_figure" style="margin-bottom:30%;margin-left: 20%;">
                               <figcaption style="text-align: center;font-size: 150%">vs. Wind-Speed</figcaption>
-                                <img src="../Visualizations/City_Latitude_vs_Wind-Speed.png" alt="Latitude_Wind-Speed" >
+                                <img src=".//Visualizations/City_Latitude_vs_Wind-Speed.png" alt="Latitude_Wind-Speed" >
                              </figure></a>
                     </div>
             </div>
