--- a/Temperature.html
+++ b/Temperature.html
@@ -99,7 +99,7 @@
                   <figure id="main1_figure">
                       <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                     <a href="./Temperature.html">
-                      <img src="../Visualizations/City_Latitude_vs_Max_Temperature.png" alt="Latitude_Max_Temperature" style="width:150px;height:150px;">
+                      <img src=".//Visualizations/City_Latitude_vs_Max_Temperature.png" alt="City_Latitude_vs_Max_Temperature" style="width:150px;height:150px;">
                     </a>
                     </figure>
         
@@ -108,7 +108,7 @@
                   <figure id="main1_figure">
                       <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                       <a href="./Cloudiness.html">
-                      <img   src="../Visualizations/City_Latitude_vs_Cloudiness.png" alt="Latitude_Cloudiness" style="width:150px;height:150px;">
+                      <img   src=".//Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:150px;height:150px;">
                       </a>
                     </figure>
               </div>
@@ -119,7 +119,7 @@
                     <figure id="main1_figure">
                         <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                         <a href="./Humidity.html">
-                        <img src="../Visualizations/City_Latitude_vs_Humidity.png" alt="Latitude_Humidity" style="width:150px;height:150px;">
+                        <img src=".//Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
@@ -127,7 +127,7 @@
                     <figure id="main1_figure">
                         <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                         <a href="./Wind-Speed.html">
-                        <img  src="../Visualizations/City_Latitude_vs_Wind-Speed.png" alt="Latitude_Wind-Speed" style="width:150px;height:150px;">
+                        <img  src=".//Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
