--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <section id="introduction">
                     <figure id="main_figure">
                       <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
-                      <img  id="main_fig" src="../Visualizations/City_Latitude_vs_Max_Temperature.png" alt="Latitude_Max_Temperature" style="width:300px;height:300px;float:left">
+                      <img  id="main_fig" src=".//Visualizations/City_Latitude_vs_Max_Temperature.png" alt="Latitude_Max_Temperature" style="width:300px;height:300px;float:left">
                     </figure>
                 <p> This project is to visualize weather analysis results performed in a previous project <a href="https://github.com/skriggs72/python-api-challenge"> Weather project</a>, in which we studied the current weather all over 
                     the world. We are supposed to choose more than 500 cities with random latitude and longitude coordinates. Query the weather data from OpenWeatherMap API, make some plots and draw some conclusions about the dependence of 
@@ -106,7 +106,7 @@
                       <figure id="main1_figure">
                           <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                         <a href="./Temperature.html">
-                          <img src="../Visualizations/City_Latitude_vs_Max_Temperature.png" alt="Latitude_Max_Temperature" style="width:150px;height:150px;">
+                          <img src=".//Visualizations/City_Latitude_vs_Max_Temperature.png" alt="Latitude_Max_Temperature" style="width:150px;height:150px;">
                         </a>
                         </figure>
             
@@ -115,7 +115,7 @@
                       <figure id="main1_figure">
                           <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                           <a href="./cloudiness.html">
-                          <img   src="../Visualizations/City_Latitude_vs_Cloudiness.png" alt="Latitude_Cloudiness" style="width:150px;height:150px;">
+                          <img   src=".//Visualizations/City_Latitude_vs_Cloudiness.png" alt="Latitude_Cloudiness" style="width:150px;height:150px;">
                           </a>
                         </figure>
                   </div>
@@ -126,15 +126,15 @@
                         <figure id="main1_figure">
                             <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                             <a href="./Humidity.html">
-                            <img   src="../Visualizations/City_Latitude_vs_Humidity.png" alt="Latitude_Humidity" style="width:150px;height:150px;">
+                            <img   src=".//Visualizations/City_Latitude_vs_Humidity.png" alt="Latitude_Humidity" style="width:150px;height:150px;">
                             </a>  
                         </figure>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-6">
                         <figure id="main1_figure">
                             <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
-                            <a href="./wind-speed.html">
-                            <img  src="../Visualizations/City_Latitude_vs_Wind-Speed.png" alt="Latitude_Wind-Speed" style="width:150px;height:150px;">
+                            <a href="./Wind-Speed.html">
+                            <img  src=".//Visualizations/City_Latitude_vs_Wind-Speed.png" alt="Latitude_Wind-Speed" style="width:150px;height:150px;">
                             </a>  
                         </figure>
                     </div>
