--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -75,7 +75,7 @@
             <figure class="figure">
                 <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                 <br>
-                <img src="../Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:100%;height:100%;">
+                <img src=".//Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:100%;height:100%;">
                 <figcaption>
                         There is no obvious dependence of cloudiness on latitude. Yet somehow there are several cloudiness values, 0, 20, 40, 78, 97, are most crowded with cities all over the world, much more than other values.
                 </figcaption>  
@@ -98,7 +98,7 @@
                   <figure id="main1_figure">
                       <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                     <a href="./Temperature.html">
-                      <img src="../Visualizations/City_Latitude_vs_Max_Temperature.png" alt="City_Latitude_vs_Max_Temperature" style="width:150px;height:150px;">
+                      <img src=".//Visualizations/City_Latitude_vs_Max_Temperature.png" alt="City_Latitude_vs_Max_Temperature" style="width:150px;height:150px;">
                     </a>
                     </figure>
         
@@ -107,7 +107,7 @@
                   <figure id="main1_figure">
                       <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                       <a href="./cloudiness.html">
-                      <img src="../Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:150px;height:150px;">
+                      <img src=".//Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:150px;height:150px;">
                       </a>
                     </figure>
               </div>
@@ -118,7 +118,7 @@
                     <figure id="main1_figure">
                         <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                         <a href="./Humidity.html">
-                        <img src="../Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity" style="width:150px;height:150px;">
+                        <img src=".//Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
@@ -126,7 +126,7 @@
                     <figure id="main1_figure">
                         <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                         <a href="./wind-speed.html">
-                        <img  src="../Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed" style="width:150px;height:150px;">
+                        <img  src=".//Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
