--- a/Humidity.html
+++ b/Humidity.html
@@ -77,7 +77,7 @@
 
             <figure id="main1_figure">
                 <!-- <figcaption>Latitude_Max_Temperature</figcaption> -->
-                <img src="../Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity.png" style="width:100%;height:100%;align:middle">
+                <img src=".//Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity.png" style="width:100%;height:100%;align:middle">
                 <figcaption>
                         The humidity percentage has only weak dependence on the latitude. It takes smallest value around -20 (Southern Hemisphere) and 20 latitude (Northern Hemisphere).
                 </figcaption>  
@@ -100,7 +100,7 @@
                   <figure id="main1_figure">
                       <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                     <a href="./Temperature.html">
-                      <img src="../Visualizations/City_Latitude_vs_Max_Temperature.png" alt="City_Latitude_vs_Max_Temperature" style="width:150px;height:150px;">
+                      <img src=".//Visualizations/City_Latitude_vs_Max_Temperature.png" alt="City_Latitude_vs_Max_Temperature" style="width:150px;height:150px;">
                     </a>
                     </figure>
         
@@ -109,7 +109,7 @@
                   <figure id="main1_figure">
                       <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                       <a href="./Cloudiness.html">
-                      <img   src="../Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:150px;height:150px;">
+                      <img   src=".//Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:150px;height:150px;">
                       </a>
                     </figure>
               </div>
@@ -120,7 +120,7 @@
                     <figure id="main1_figure">
                         <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                         <a href="./Humidity.html">
-                        <img   src="../Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity" style="width:150px;height:150px;">
+                        <img   src=".//Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
@@ -128,7 +128,7 @@
                     <figure id="main1_figure">
                         <!-- <figcaption>latitude_Max-Temperature</figcaption> -->
                         <a href="./wind-speed.html">
-                        <img  src="../Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed" style="width:150px;height:150px;">
+                        <img  src=".//Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
