--- a/Wind-Speed.html
+++ b/Wind-Speed.html
@@ -69,7 +69,7 @@
           <figure class="figure">
           <br>
           <br>
-                <img src="../Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed(mph)" style="width:100%;height:100%;">
+                <img src=".//Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed(mph)" style="width:100%;height:100%;">
                 <figcaption>
                         There is no obvious dependence of wind speed on latitude. The wind speed in general is from 0 mph to 15 mph.
                </figcaption>  
@@ -89,7 +89,7 @@
               <div class="col-xs-3 col-sm-3 col-md-6">
                   <figure id="main1_figure">
                       <a href="./Temperature.html">
-                      <img src="../Visualizations/City_Latitude_vs_Max_Temperature.png" alt="City_Latitude_vs_Max_Temperature" style="width:150px;height:150px;">
+                      <img src=".//Visualizations/City_Latitude_vs_Max_Temperature.png" alt="City_Latitude_vs_Max_Temperature" style="width:150px;height:150px;">
                     </a>
                     </figure>
         
@@ -97,21 +97,21 @@
               <div class="col-xs-3 col-sm-3 col-md-6">
                   <figure id="main1_figure">
                       <a href="./cloudiness.html">
-                      <img   src="../Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:150px;height:150px;">
+                      <img   src=".//Visualizations/City_Latitude_vs_Cloudiness.png" alt="City_Latitude_vs_Cloudiness" style="width:150px;height:150px;">
                       </a>
                     </figure>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-6">
                     <figure id="main1_figure">
                         <a href="./Humidity.html">
-                        <img   src="../Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity" style="width:150px;height:150px;">
+                        <img   src=".//Visualizations/City_Latitude_vs_Humidity.png" alt="City_Latitude_vs_Humidity" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
                 <div class="col-xs-3 col-sm-3 col-md-6">
                     <figure id="main1_figure">
                         <a href="./wind-speed.html">
-                        <img  src="../Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed" style="width:150px;height:150px;">
+                        <img  src=".//Visualizations/City_Latitude_vs_Wind-Speed.png" alt="City_Latitude_vs_Wind-Speed" style="width:150px;height:150px;">
                         </a>  
                     </figure>
                 </div>
